...
    // Utiliser le viewModel pour les observations
    final observationsState =
        widget.ref.watch(observationsProvider(fullVisit.idBaseVisit));

    // Bouton d'ajout d'observation
    Widget addObservationButton = ElevatedButton.icon(
      key: const Key('add-observation-button'),
      onPressed: () {
        _showAddObservationDialog(fullVisit.idBaseVisit, observationConfig);
      },
      icon: const Icon(Icons.add),
      label: const Text('Ajouter'),
    );
...
